--- a/View/MainPage.xaml
+++ b/View/MainPage.xaml
@@ -21,6 +21,8 @@
         <Button Grid.Row="1" 
                 Command="{Binding StartShareCommand}"
                 Content="{Binding ScreenShareButtonContent, Mode=OneWay}"></Button>
-        <Button Grid.Row="2">Start voice</Button>
+        <Button Grid.Row="2"
+                Command="{Binding StartVoiceCommand}"
+                Content="{Binding VoiceButtonContent, Mode=OneWay}"></Button>
     </Grid>
 </Window>
